@@ -5,7 +5,8 @@ configurable, you might (cd $KDEDIR; mv kvt kvt.ori; ln -s konsole kvt)
 to integrate konsole fully into the K Desktop Environment.
 
 Before sending out any reports about broken or missing features, please
-check the newest TODO and README.bugs. There are still a few loose ends.
+check the newest TODO and the html documentation that comes with konsole.
+There are still a few loose ends.
 
 Share and enjoy,
   Lars
