@@ -1,3 +1,6 @@
+22 Mar 1999
+- made a non-glibc2.1 version of the fix below.
+  Guess there are still some signal/wait problems in it...
 18 Mar 1999
 - added grantpt to prevent eavesdroping the slave tty.
   konsole now depends on at least glibc2.1
